nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ghcr.io/tcardone/trc/nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
          - name: dockerconfigjson-github-com
