nginxservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
  type: LoadBalancer
